--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "author": "",
   "name": "elastisnap",
   "description": "Amazon Elastic Block Store (EBS) rotating snapshots.",
   "version": "0.0.0",
   "repository": {
-    "url": ""
+      "type": "git",
+      "url": "git://github.com/mapbox/elastisnap.git"
   },
   "main": "index.js",
   "engines": {
@@ -15,6 +15,5 @@
     "underscore": "1.1.x",
     "optimist": "0.2.x",
     "step": "0.0.x"
-  },
-  "devDependencies": {}
+  }
 }
