--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "url": "git://github.com/mapbox/elastisnap.git"
   },
   "main": "index.js",
+  "bin": "./bin/elastisnap",
   "engines": {
       "node": "0.4.x || 0.6.x"
   },
