--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "node": "0.4.x || 0.6.x"
   },
   "dependencies": {
-    "aws-lib": "https://github.com/ianshward/aws-lib/tarball/metadata-api-cleanup",
+    "aws-lib": "0.1.5",
     "underscore": "1.1.x",
     "optimist": "0.2.x",
     "step": "0.0.x"
