Add example region in settings.example.json
Region seems to be required.

--- a/settings.example.json
+++ b/settings.example.json
@@ -1,6 +1,7 @@
 {
     "awskey": "XXXXX",
     "awssecret": "XXXXX",
+    "region": "us-west-1",
     "jobs": [
         {
             "instanceid": "i-XXXXXXX",
